# iway

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  config.toml  server.crt  server.key
.cargo/: deny.toml
.github/workflows/: release.yml
logs/: app.log.2025-11-02
src/: config.rs  lib.rs  main.rs
src/authenticate/: connection.rs  mod.rs
src/authenticate/trojan/: mod.rs
src/authenticate/tuic/: mod.rs
src/net/: tcp.rs  util.rs
src/processor/: mod.rs
src/processor/trojan/: mod.rs
src/processor/tuic/: context.rs  mod.rs  notifier.rs  session.rs  udp_session_manager.rs
src/processor/tuic/command/: authenticate.rs  connect.rs  dissociate.rs  heartbeat.rs  mod.rs  packet.rs
src/protocol/: mod.rs
src/protocol/trojan/: address.rs
src/protocol/trojan/command/: mod.rs
src/protocol/tuic/: address.rs  address_type.rs  dns_cache.rs  header.rs  mod.rs  version.rs
src/protocol/tuic/command/: authenticate.rs  command.rs  command_type.rs  connect.rs  dissociate.rs  heartbeat.rs  mod.rs  packet.rs
src/server/: mod.rs  resolver.rs  tls.rs  trojan.rs  trojan_fallback.rs  tuic.rs
src/sockets/: mod.rs
