[package]
name = "iway"
version = "1.1.5"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bytes = "1.10.1"
chrono = "0.4.42"
dashmap = { version = "6.1.0", features = ["serde"] }
log = "0.4.28"
thiserror = "2.0.17"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.16", features=["full"]}
quinn = "0.11.9"
socket2 = "0.6.1"
rustls = { version = "0.23.32", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2.0"
uuid = "1.18.1"
libc = "0.2.177"
env_logger = "0.11.8"
console-subscriber = "0.4.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-log = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
get_if_addrs = "0.5.3"
once_cell = "1.21.3"
num_cpus = "1.17.0"

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5.4"
jemalloc-ctl = "0.5.4"
tracing-log = "0.2.0"

[target.'cfg(windows)'.dependencies]

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[dev-dependencies]
criterion = "0.7.0"
