[package]
name = "iway"
version = "2.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bytes = "1.11.0"
dashmap = { version = "6.1.0", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.16", features=["full"]}
quinn = "0.11.9"
socket2 = "0.6.1"
rustls = { version = "0.23.32", features = ["aws_lc_rs"] }
uuid = "1.18.1"
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
get_if_addrs = "0.5.3"
once_cell = "1.21.3"
num_cpus = "1.17.0"

# logger
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# zeroize clears sensitive memory on drop
zeroize = { version = "1.6", features = ["derive"] }
# constant-time comparison to prevent timing attacks
subtle = "2.5"
zerocopy = { version = "0.8.31", features = ["derive"] }
parking_lot = "0.12.5"
moka = { version = "0.12", features = ["future"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = "0.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.1"
