[package]
name = "iway"
version = "3.0.1"
edition = "2024"
[dependencies]
async-trait = "0.1.89"
bytes = "1.11.0"
dashmap = { version = "6.1.0", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1.0.100"

tokio = { version = "1.48.0", features = ["full", "tracing"] }
quinn = "0.11.9"
socket2 = "0.6.1"
rustls = { version = "0.23.36", features = ["ring"] }
uuid = "1.18.1"
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
once_cell = "1.21.3"
num_cpus = "1.17.0"
sha2 = "0.10"
rustls-pemfile = "2.1"


tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

zeroize = { version = "1.6", features = ["derive"] }
subtle = "2.5"
parking_lot = "0.12.5"
if-addrs = "0.14.0"
dhat = "0.3.3"
tokio-rustls = "0.26.4"
hex = "0.4.3"
tokio-util = "0.7.17"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
debug = false

[features]
dhat-heap = [] 

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = "0.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.1"
